--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surpresa para Minha Namorada</title>
+    <title>7 meses com a melhor pessoa do universo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,7 +15,10 @@
         <img src="sua-foto.jpg" alt="Foto do Casal" class="photo">
         <div class="letter">
             <p id="counter"></p>
-            <p>Texto especial para ela...</p>
+            <p> Oi vida, em 7 meses você transformou minha vida de uma forma que eu jamais imaginei ser possivel. Me sinto a pessoa mais sortuda do mundo por ter você na minha vida.
+            Obrigada por escolher ficar, por escolher construir uma vida comigo. Sua presença mesmo que distante ilumina os meus dias e me faz querer ser sempre uma pessoa melhor para você.
+            Você é sem dúvida a melhor coisa que já me aconteceu. Sou muito grata por ter você ao meu lado, por compartilhar esse sorriso lindo, esses olhos numa cor esquisitinha e ainda assim tão lindos, essa sua voz gostosa de se ouvir, e por compartilhar o seu amor comigo. Espero que esses 7 meses sejam apenas o começo da nossa história.
+            Eu amo muito, muito, muito, muito ,muito, infinitamente muito você 💛</p>
         </div>
     </div>
 
